--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ header{
   cursor: pointer;
   box-shadow: 0 0 6px rgba(0,0,0,0.5);
   border-radius: 20%;
+  z-index: 1;
 }
 
 .menu-navigation{
@@ -413,6 +414,13 @@ span:after{
   justify-content: center;
   text-align: center;
   background: var(--whiteLight);
+}
+
+@media (max-width: 519px) {
+  #projects {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 #projects div{
