--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Consolas,monaco,monospace;
 }
 
 /*------------------------------------------*/
@@ -29,7 +29,7 @@
 
 .title-section{
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   margin-bottom: 40px;
   margin-top: -25px;
 }
@@ -80,7 +80,7 @@ header{
 .menu-navigation a{
   color: white;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 300;
 }
 
@@ -104,13 +104,13 @@ header{
 }
 
 .title{
-  font-size: 60px;
+  font-size: 80px;
   margin-bottom: 15px;
 }
 
 .copy {
   font-weight: 300;
-  font-size: 25px;
+  font-size: 35px;
 }
 
 .spread{
@@ -139,19 +139,20 @@ header{
 
 #about-me div h4{
   color: black;
-  font-size: 20px;
+  font-size: 25px;
   margin: 15px 0px;
 }
 
 #about-me div p{
   color: black;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .orange-button {
   display: inline-block;
   text-decoration: none;
   font-weight: bold;
+  font-size: 20px;
   color: var(--orange);
   padding: 10px 30px;
   border: 3px solid var(--orange);
@@ -230,7 +231,7 @@ header{
 }
 
 .timeline-date{
-  font-size: 18px;
+  font-size: 25px;
   color: var(--orange);
   margin: 6px 0 15px;
 }
@@ -243,7 +244,7 @@ header{
 }
 
 .timeline-content h3{
-  font-size: 20px;
+  font-size: 25px;
   color: white;
   margin:0 0 10px;
   text-transform: capitalize;
@@ -252,7 +253,7 @@ header{
 
 .timeline-content p{
   color: var(--greyVeryLight);
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 300;
   line-height: 22px;
 }
@@ -274,6 +275,7 @@ header{
 
 #content-competencies h3{
   margin: 12px 0;
+  font-size: 20px;
   color: black;
   font-weight: 300;
 }
@@ -452,7 +454,7 @@ span:after{
 
 #projects div h4{
   color: white;
-  font-size: 20px;
+  font-size: 25px;
   margin: 15px 0px;
 }
 
@@ -472,6 +474,7 @@ span:after{
   display: inline-block;
   text-decoration: none;
   font-weight: bold;
+  font-size: 20px;
   color: white;
   padding: 10px 30px;
   border: 3px solid white;
@@ -508,7 +511,7 @@ span:after{
 #content-contact div p{
   margin-top: 15px;
   color: black;
-  font-size: 18px;
+  font-size: 25px;
 }
 
 #content-contact div img{
@@ -524,6 +527,9 @@ footer{
   color: white;
   text-align: center;
   padding: 10px 0px;
+  p {
+    font-size: 20px;
+  }
 }
 
 /*------------------------------------------*/
@@ -576,7 +582,7 @@ footer{
 
   /* HEADER */
   .menu-navigation a{
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 300;
   }
 }
